# shaitamamMedAIHub

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  FRONTEND_ROADMAP.md  README.md  analyze_files.ps1  analyze_files2.ps1  nixpacks.toml  railway.json  schema.sql
.claude/: DEGINE.TXT  IMPLEMENTATION_PLAN.md  QUESTION ARCHITECT .md  settings.local.json
.claude/.claude/: AGENT_TEMPLATE.md  README.md  settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  test_gems_defaults.py
backend/app/api/models/: frameworks.py  schemas.py  screening.py
backend/app/api/routes/: define.py  projects.py  query.py  review.py  screening.py
backend/app/core/: auth.py  config.py  exceptions.py  logging_config.py  search_config.py
backend/app/core/gems/: __init__.py  criteria_library.py  defaults.py
backend/app/core/prompts/: __init__.py  define.py  query.py  screening.py  shared.py
backend/app/services/: __init__.py  ai_service.py  cache_service.py  database.py  medline_parser.py  mesh_service.py  pubmed_service.py  query_builder.py  rule_engine.py  screening_service.py
backend/scripts/: import_mesh.py
backend/tests/: __init__.py  conftest.py  test_ai_service.py  test_api_endpoints.py  test_api_routes.py  test_cache_service.py  test_database_service.py  test_hebrew_translation.py  test_medline_parser.py  test_mesh_service.py  test_query_builder.py  test_screening_integration.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  DATABASE.md  Define Tool Documentation.md  QUERY_TOOL_ARCHITECTURE.md  README.md  Smart Screener AI Layer Implementation.md  Smart Screener Development Spec.MD  Smart Screener Work Plan.MD  USER_MANAGEMENT_PLAN.md  medai-project-selection-v2.jsx  medai-pubmed-search-clean.jsx  medai-query-builder-clean.jsx  rls_policies.sql  schema.sql
docs/backend/: PRD_API_DEFINE.md  PRD_API_PROJECTS.md  PRD_API_QUERY.md  PRD_API_REVIEW.md  PRD_DATABASE.md  PRD_SERVICES.md  README.md
docs/frontend/: PRD_AUTH.md  PRD_DEFINE.md  PRD_HOME.md  PRD_PROJECTS.md  PRD_QUERY.md  PRD_REVIEW.md  README.md
docs/plans/: feature-query-tool-optimization-2025-11-30.md
frontend/: .env.local.example  .gitignore  README.md  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/.storybook/: preview.tsx
frontend/__tests__/: setup.ts
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: error-boundary.tsx  keyboard-shortcuts-dialog.tsx  mobile-nav.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts  supabase.ts  (+2 more)
scripts/: verify_phase1.py
(+85 files in other folders)
