# MedAI Hub - Backend Configuration
# Python project configuration for linting, testing, and packaging

[project]
name = "medai-hub-backend"
version = "1.0.0"
description = "AI-powered systematic literature review platform for medical researchers"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "*.pyc",
]

# Line length
line-length = 100

# Target Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), isort (I), and more
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E722",   # Bare except (used in error recovery patterns)
    "E741",   # Ambiguous variable name (needed for PICO/PEO framework fields like I, O)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # Within an except clause, raise exceptions with `raise ... from err`
    "ARG001", # Unused function argument (common in FastAPI)
    "ARG002", # Unused method argument (needed for interface compatibility)
    "SIM102", # Nested if statements (sometimes clearer)
    "SIM115", # Context manager for file opening (script-specific)
    "SIM117", # Nested with statements (sometimes clearer)
    "UP007",  # Union type annotations (backwards compatibility)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Unix line endings
line-ending = "lf"

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# Markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
# Coverage configuration
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
# Minimum coverage percentage
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
